# song_year_guesser

./: .cursorrules  .gitignore  AI_LOGO_PROMPTS.md  CLAUDE.md  LICENSE  README.md  SUPABASE_SETUP.md  TROUBLESHOOTING.md  debug_secrets.py  generate_logo.py  leaderboard.json  main.py  packages.txt  pyproject.toml  requirements.txt  supabase_setup.sql  ui_components.py  verify_setup.py
.github/: copilot-instructions.md
.streamlit/: secrets.toml.example
