[project]
name = "song-year-guesser"
version = "1.0.0"
description = "A multiplayer web game where players guess the release year of popular songs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["streamlit", "game", "music", "deezer", "trivia"]
authors = [
    { name = "rlf037" }
]
dependencies = [
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "streamlit==1.41.1",
    "streamlit-autorefresh>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/rlf037/song_year_guesser"
Repository = "https://github.com/rlf037/song_year_guesser"
