[project]
name = "song-year-guesser"
version = "1.0.0"
description = "A multiplayer web game where players guess the release year of popular songs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["streamlit", "game", "music", "deezer", "trivia"]
authors = [
    { name = "rlf037" }
]
dependencies = [
    "pillow==12.1.0",
    "requests==2.32.5",
    "streamlit==1.52.2",
    "streamlit-autorefresh==1.0.1",
]

[project.urls]
Homepage = "https://github.com/rlf037/song_year_guesser"
Repository = "https://github.com/rlf037/song_year_guesser"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # function name should be lowercase (Streamlit uses CamelCase sometimes)
    "N803",   # argument name should be lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
